--- a/part02/BookReview/app/src/main/AndroidManifest.xml
+++ b/part02/BookReview/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.BookReview">
+        android:theme="@style/Theme.BookReview"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".DetailActivity" />
     </application>
 
 </manifest>
